--- a/src/app/components/element-collection/element-collection.component.html
+++ b/src/app/components/element-collection/element-collection.component.html
@@ -12,4 +12,5 @@ No trackBy
   </li>
 </ul>
 
-<button (click)="onCLick()">Кнопка</button>
+<button (click)="onCLickOne()">Кнопка изменяющая состав элементов</button>
+<button (click)="onClickTwo()">Просто кнопка</button>
